# ascf

./: chi0.0.txt  chi0.25.txt  chi0.5.txt  chi0.75.txt  chi1.0.txt  main.py  pyproject.toml
ascf/: __init__.py  ascf.py
